Adding-ContactUsPage-modified-some-pages

--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ body.dark {
 
   /* Dark mode color utilities */
   .dark .text-gray-100 {
-    color: #322c8c;
+    color: #383288;
   }
 
   .dark .text-gray-300 {
